@@ -1,5 +1,7 @@
 Revision history for Const::Exporter
 
+         - Added requirements to README.
+
 v0.2.0   2014-05-29
 
          - Bug Fix: scalar constants can have blessed values.
